--- a/app/src/main/res/layout/activity_accesos.xml
+++ b/app/src/main/res/layout/activity_accesos.xml
@@ -413,6 +413,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/LinLayRadioButtonsPlacas"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
