Boton habilitado y deshabilitado al registrar

--- a/app/src/main/res/layout/activity_accesosgrupales.xml
+++ b/app/src/main/res/layout/activity_accesosgrupales.xml
@@ -636,7 +636,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
@@ -758,7 +758,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
@@ -883,7 +883,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
@@ -1006,7 +1006,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
