--- a/app/src/main/res/layout/activity_accesosmultiples.xml
+++ b/app/src/main/res/layout/activity_accesosmultiples.xml
@@ -639,7 +639,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
@@ -761,7 +761,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
@@ -886,7 +886,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
@@ -1009,7 +1009,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/fontColorNegro"
