--- a/app/src/main/res/layout/activity_incidencia.xml
+++ b/app/src/main/res/layout/activity_incidencia.xml
@@ -226,7 +226,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
@@ -312,7 +312,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
@@ -462,7 +462,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
@@ -596,7 +596,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
