--- a/app/src/main/res/layout/activity_preentradas.xml
+++ b/app/src/main/res/layout/activity_preentradas.xml
@@ -621,7 +621,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -755,7 +755,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -893,7 +893,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -1028,7 +1028,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
