--- a/app/src/main/res/layout/activity_preentradasmultiplesqr.xml
+++ b/app/src/main/res/layout/activity_preentradasmultiplesqr.xml
@@ -582,7 +582,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -716,7 +716,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -854,7 +854,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -989,7 +989,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
