--- a/app/src/main/res/layout/acitivity_accesostrabajador.xml
+++ b/app/src/main/res/layout/acitivity_accesostrabajador.xml
@@ -260,7 +260,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:fontFamily="@font/fontNegritaC"
                         android:gravity="center"
                         android:text="REGISTRAR"
