--- a/app/src/main/res/layout/activity_preentradasqr.xml
+++ b/app/src/main/res/layout/activity_preentradasqr.xml
@@ -580,7 +580,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -714,7 +714,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -852,7 +852,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
@@ -987,7 +987,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/boton_descargar"
+                        android:background="@drawable/ripple_effect"
                         android:gravity="center"
                         android:text="REGISTRAR"
                         android:textColor="@color/FormTextColor"
