--- a/app/src/main/res/layout/activity_rondinincidencias_qr.xml
+++ b/app/src/main/res/layout/activity_rondinincidencias_qr.xml
@@ -227,7 +227,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
@@ -314,7 +314,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
@@ -465,7 +465,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
@@ -601,7 +601,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
-                    android:background="@drawable/boton_descargar"
+                    android:background="@drawable/ripple_effect"
                     android:gravity="center"
                     android:text="Registrar"
                     android:textColor="@color/FormTextColor"
